@@ -1,3 +1,7 @@
+2005-12-20  Tom Tromey  <tromey@redhat.com>
+
+	* model/primitive.hh (unsigned_right_shift): Mask relevant bits.
+
 2005-12-19  Tom Tromey  <tromey@redhat.com>
 
 	* model/primitive.hh (unsigned_right_shift): Use long long.
